# django-nice

./: .gitignore  LICENSE  MANIFEST.in  README.md  frontend.py  setup.cfg  setup.py  sse.py  views.py
.github/workflows/: publish.yml
django_nice/: config.py  frontend.py  signals.py  sse.py  urls.py  views.py
