[metadata]
name = django-nice
version = 0.3.986
description = Library to bind Django models with NiceGUI elements using DRF and SSE.
author = Jeffery Springs
author_email = rexsum420@gmail.com
url = https://github.com/rexsum420/django-nice
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages=find:
install_requires =
    Django>=3.2
    djangorestframework
    django-sse
    nicegui
python_requires = >=3.6
include_package_data = True

[options.extras_require]
dev =
    pytest
    black
    flake8

[options.package_data]
* = static/*, templates/*